--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -857,6 +857,7 @@ page = 9
         ;unused10_154        = scalar, U08,    154,       "",       1, 0, 0, 255, 0
         iacStepperInv  = bits,    U08,     153, [0:0], "No",        "Yes"
         limitTachoPulse  = bits,  U08,     153, [1:1], "No",        "Yes"
+        iacCoolTime  = bits , U08,      153, [2:4],      "0", "1", "2", "3", "4", "5", "6","INVALID"
         tachoPulseLimit = scalar, U08,     154,         "ms",       0.1,    0,    0.1, {dwellrun-0.5}, 1
 
         unused10_155        = scalar, U08,    155,       "",       1, 0, 0, 255, 0
@@ -1349,6 +1350,8 @@ menuDialog = main
 
 	iacChannels = "The number of output channels used for PWM valves. Select 1 for 2-wire valves or 2 for 3-wire valves."
 	iacStepTime = "Pause time between each step. Values that are too low can cause the motor to behave erratically or not at all"
+  iacCoolTime = "Cool time between each step. Set to zero if you don't want any cooling at all"
+  
     iacStepHome = "Homing steps to perform on startup. Must be greater than the fully open steps value"
 	iacStepHyster = "The minimum number of steps to move in any one go."
 	iacAlgorithm = "Selects method of idle control.\nNone = no idle control valve.\nOn/Off valve.\nPWM valve (2,3 wire).\nStepper Valve (4,6,8 wire)."
@@ -1722,6 +1725,7 @@ menuDialog = main
 
     dialog = stepper_idle, "Stepper Idle"
         field = "Step time (ms)",       iacStepTime,            { iacAlgorithm == 4 || iacAlgorithm == 5 }
+        field = "Cool time (ms)",       iacCoolTime,            { iacAlgorithm == 4 || iacAlgorithm == 5 }
         field = "Home steps",           iacStepHome,            { iacAlgorithm == 4 || iacAlgorithm == 5 }
         field = "Minimum Steps",		iacStepHyster,			{ iacAlgorithm == 4 || iacAlgorithm == 5 }
         field = "Stepper Inverted", iacStepperInv,       { iacAlgorithm == 4 || iacAlgorithm == 5 }
