--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -3127,7 +3127,8 @@ cmdtestspk450dc = "E\x03\x0C"
    indicator = { resetLockOn        }, "Reset Lock OFF","Reset Lock ON",     red, black, green,    black
    indicator = { bootloaderCaps > 0 }, "Std. Boot",     "Custom Boot",  white, black, white,    black
    indicator = { nitrousOn          }, "Nitrous Off",   "Nitrous On",   white, black, red,      black
-
+   indicator = { fuelprime          }, "Not Priming",    "Priming",         white, black, green,    black
+   
 ;-------------------------------------------------------------------------------
 
 [OutputChannels]
@@ -3199,6 +3200,7 @@ cmdtestspk450dc = "E\x03\x0C"
    testoutputs      = scalar,   U08,    38, "bits",   1.000, 0.000
    testenabled       = bits,    U08,	  38, [0:0]
    testactive        = bits,    U08,	  38, [1:1]
+   fuelprime         = bits,    U08,    38, [2:2]  ; Not strictly part of "testoutputs" but added here to avoid having to make the structure larger.
    afr2             = scalar,   U08,    39, "O2",     0.100, 0.000
    baro             = scalar,   U08,    40, "kpa",      1.000, 0.000
    auxin_gauge0	    = scalar,   U16,	41,	"",		1.000, 0.000
